# ChangeLog for dev-ruby/object_daddy
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*object_daddy-0.4.2 (02 Feb 2010)

  02 Feb 2010; Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
  +object_daddy-0.4.2.ebuild, +metadata.xml:
  Initial version of object_daddy