@@ -1,3 +1,4 @@
 DIST object_daddy-0.4.2.tgz 13207 RMD160 d6ac7caec70ceea00aba12140803639cb0840e85 SHA1 1440437c6e67d9f1974127abf88d49edfa853411 SHA256 aa1fa3e0db05736712d25a067aa51e1036e616530cbc7443a791209b6faafc5d
-EBUILD object_daddy-0.4.2.ebuild 610 RMD160 47c0600d1bd4951463f67ffd8bf20b0ec2c8a863 SHA1 f77dc541a2bf936913d21af792ffa31ea6dd5c6f SHA256 ac8e33db226b4d4b934ad280ab3066e6512afc79b4ff96f93bab65695e84df8f
+EBUILD object_daddy-0.4.2.ebuild 654 RMD160 237068b32236f8378a48e9bd809a5614ca190c91 SHA1 96c6018bcaddbb5903f474b52ba7662f4c68407a SHA256 54b9734323eb426ac0977c1d61839eeccc97df7edf2e717d33fa9aa321d2cf09
+MISC ChangeLog 449 RMD160 e469a30cd50689f0e03299626841abc8ef24be7f SHA1 de50216eb3d85b2fc906730810a6d52089202097 SHA256 f160f8027cc7a8d5e8f8c948208d5108c9786540d0ec37cacc355f72f43d32a7
 MISC metadata.xml 534 RMD160 129bd74432811bd11e6a91d6677f78fee7f372fb SHA1 ad57effc735b1554f71caa1e0cd1da204f2778fe SHA256 87f822a09f9aabc71339721db11785987f997de1a1c7b67ec77953ce1af002dc
