@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Feb 2010; Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
+  object_daddy-0.4.2.ebuild:
+  Rewrite from ruby-ng to ruby-fakegem
+
 *object_daddy-0.4.2 (02 Feb 2010)
 
   02 Feb 2010; Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
